heroe components with buttons added

--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -1,2 +1,23 @@
-<h1>Heroe Words</h1>
 
+<h1>{{ nombre }} </h1>
+<dl>
+  <td>Nombre: </td>
+  <dd>{{ nombre }} </dd>
+  
+  <td>Edad: </td>
+  <dd>{{ edad }} </dd>
+  
+  <td>Funcion: </td>
+  <dd>{{ obtenerNombre() }} </dd>
+
+  <td>Capitalizado: </td>
+  <dd>{{ nombreCapitaliZado }} </dd>
+</dl>
+
+<button>
+  Cambiar heroe
+</button>
+
+<button>
+  Cambiar edad
+</button>
