add counter module

--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -14,10 +14,10 @@
   <dd>{{ nombreCapitaliZado }} </dd>
 </dl>
 
-<button>
+<button (click)="cambiarNombre()">
   Cambiar heroe
 </button>
 
-<button>
+<button (click)="cambiarEdad()">
   Cambiar edad
 </button>
