--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -1,2 +1,47 @@
 <h1>Dragon Ball Z</h1>
 <hr>
+
+<div class="row">
+  <div class="col">
+
+    <h3>Personajes</h3>
+    <hr>
+    <ul>
+      <li>Krimlim - 700</li>
+      <li>Goku - 15 000</li>
+      <li>Vegetta - 8 500</li>
+    </ul>
+  </div>
+
+  <div class="col">
+    <h3>Agregar <small>{{nuevo.nombre}} </small> </h3>
+
+    <hr>
+
+    <form (ngSubmit)="agregar()">
+      <input 
+        type="text" 
+        placeholder="Nombre de personaje"
+        name="nombre"
+        [(ngModel)]="nuevo.nombre" 
+        >
+
+        <!--  
+          una forma de hacer one way data binding
+          [value]="nuevo.nombre" 
+          (input)="cambiarNombre( $event ) 
+        -->
+
+      <input 
+        type="number" 
+        placeholder="Poder" 
+        name="poder"
+        [(ngModel)]="nuevo.poder">
+
+      <button type="submit">
+        Agregar
+      </button>
+
+    </form>
+  </div>
+</div>
