--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -2,45 +2,13 @@
 <hr>
 
 <div class="row">
+
   <div class="col">
-
-    <app-personajes [personajes]="personajes" >
-
-    </app-personajes>
-<!--
-     -->
-
+    <app-personajes></app-personajes>
   </div>
 
   <div class="col">
-    <h3>Agregar <small>{{ nuevo.nombre }} </small> </h3>
-
-    <hr>
-
-    <form (ngSubmit)="agregar()">
-      <input
-        type="text"
-        placeholder="Nombre de personaje"
-        name="nombre"
-        [(ngModel)]="nuevo.nombre"
-        >
-
-        <!--
-          una forma de hacer one way data binding
-          [value]="nuevo.nombre"
-          (input)="cambiarNombre( $event )
-        -->
-
-      <input
-        type="number"
-        placeholder="Poder"
-        name="poder"
-        [(ngModel)]="nuevo.poder">
-
-      <button type="submit">
-        Agregar
-      </button>
-
-    </form>
+  <app-agregar
+    [nuevo]="nuevo"></app-agregar>
   </div>
 </div>
